# NTUST_OOP_113_2_Homework

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
1132OOPMidQ01/: Form.cpp  Form.h
1132OOPMidQ02/: main.cpp
1132OOPMidQ03/: main.cpp
1132OOPMidQ04/: main.cpp
1132OOPMidQ05/: Attribute.h  Buff.h  BuffSystemExtended.docx  Player.cpp  Player.h  main.cpp
1132OOPMidQ06/: Simulating Propagation Delays in Digital Logic Gates.docx
TS0101/: main.cpp
TS0102/: main.cpp
TS0103/: main.cpp
TS0104/: main.cpp
TS0105/: main.cpp
TS0201/: main.cpp
TS0202/: main.cpp
TS0203/: main.cpp
TS0204/: main.cpp
TS0205/: main.cpp
TS0206/: main.cpp
TS0301/: main.cpp
TS0302/: main.cpp
TS0303/: main.cpp
TS0304/: main.cpp
TS0305/: main.cpp
TS0401/: Point.cpp  Point.h  main.cpp
TS0402/: Fraction.cpp  Fraction.h  main.cpp
TS0403/: main.cpp
TS0404/: BankAccount.cpp  BankAccount.h  main.cpp
TS0405/: main.cpp
TS0501/: HotDogStand.cpp  HotDogStand.h  main.cpp
TS0502/: Month.cpp  Month.h  main.cpp
TS0503/: main.cpp
TS0504/: main.cpp
TS0505/: Point.cpp  Point.h  main.cpp
TS0601/: Complex.cpp  Complex.h  main.cpp
TS0602/: PrimeNumber.cpp  PrimeNumber.h  main.cpp
TS0603/: NumberGame.cpp  NumberGame.h  main.cpp
TS0604/: VecNf.cpp  VecNf.h  main.cpp
TS0605/: Creature.cpp  Creature.h  Diary.cpp  Diary.h  main.cpp
TS0701/: Form.cpp  Form.h  main.cpp
TS0702/: Atoi.cpp  Atoi.h
TS0703/: main.cpp
TS0704/: main.cpp
TS0705/: main.cpp
TS0706/: main.cpp
TS0707/: main.cpp
TS0801/: Polynomial.cpp  Polynomial.h  main.cpp
TS0802/: main.cpp
TS0803/: main.cpp
TS0901/: main.cpp
TS0902/: main.cpp  password.cpp  password.h  user.cpp  user.h
TS0903/: main.cpp
TS1001/: PrintCombination.cpp  PrintCombination.h  main.cpp
TS1002/: main.cpp
TS1101/: document.cpp  document.h  email.cpp  email.h  file.cpp  file.h  main.cpp
TS1102/: main.cpp
TS1301/: Template.h  main.cpp
TS1302/: Template.h  main.cpp
TS1401/: Account.cpp  Account.h  main.cpp
TS1402/: School.cpp  School.h  main.cpp
TS1501/: main.cpp
TS1502/: main.cpp
